force-app/main/default/objects/User/fields/AssociationEmployeeCD__c.field-meta.xml
<CustomField>
    <fullName>AssociationEmployeeCD__c</fullName>
    <label>(不要)基会ＩＤ社員ＣＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>