force-app/main/default/objects/User/fields/Birthday__c.field-meta.xml
<CustomField>
    <fullName>Birthday__c</fullName>
    <label>(不要)生年月日</label>
    <type>Date</type>
</CustomField>