force-app/main/default/objects/User/fields/CommunityUsername__c.field-meta.xml
<CustomField>
    <fullName>CommunityUsername__c</fullName>
    <externalId>true</externalId>
    <label>コミュニティユーザ名</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>