force-app/main/default/objects/User/fields/DuplicateDate__c.field-meta.xml
<CustomField>
    <fullName>DuplicateDate__c</fullName>
    <label>(不要)複製日</label>
    <type>Date</type>
</CustomField>