force-app/main/default/objects/User/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>(不要)メール２</label>
    <type>Email</type>
</CustomField>