force-app/main/default/objects/User/fields/HomePhone__c.field-meta.xml
<CustomField>
    <fullName>HomePhone__c</fullName>
    <label>(不要)自宅ＴＥＬ２</label>
    <type>Phone</type>
</CustomField>