force-app/main/default/objects/User/fields/Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mobile__c</fullName>
    <label>(不要)携帯電話３</label>
    <type>Phone</type>
</CustomField>