force-app/main/default/objects/User/fields/Text3Group__c.field-meta.xml
<CustomField>
    <fullName>Text3Group__c</fullName>
    <label>(不要)テキスト３G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>